commited background img

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     color:white;
-    background-image:url("./images/casey-horner-RmoWqDCqN2E-unsplash.jpg");
+    /* background-image:url("./images/casey-horner-RmoWqDCqN2E-unsplash.jpg"); */
     background-size: cover;
     
 }
